# token-2022

./: Cargo.toml  Makefile  README.md  SECURITY.md  codama.json  codama.mjs  idl.json  package.json  pnpm-lock.yaml
clients/cli/: Cargo.toml  README.md
clients/cli/src/: bench.rs  clap_app.rs  command.rs  config.rs  encryption_keypair.rs  main.rs  output.rs  sort.rs
clients/cli/tests/: command.rs  config.rs
clients/rust/: Cargo.toml  README.md
clients/rust-legacy/: Cargo.toml  README.md
clients/rust-legacy/src/: client.rs  lib.rs  output.rs  token.rs
clients/rust-legacy/src/zk_proofs/: confidential_mint_burn.rs  confidential_transfer.rs  confidential_transfer_fee.rs  mod.rs
clients/rust-legacy/tests/: basic.rs  batch.rs  burn.rs  close_account.rs  confidential_mint_burn.rs  confidential_transfer.rs  confidential_transfer_fee.rs  cpi_guard.rs  default_account_state.rs  delegate.rs  freeze.rs  group_member_pointer.rs  group_pointer.rs  initialize_account.rs  initialize_mint.rs  interest_bearing_mint.rs  memo_transfer.rs  metadata_pointer.rs  mint_close_authority.rs  non_transferable.rs  pausable.rs  permanent_delegate.rs  permissioned_burn.rs  program_test.rs  reallocate.rs  scaled_ui_amount.rs  sync_native.rs  token_group_initialize.rs  token_group_initialize_member.rs  token_group_update_authority.rs  token_group_update_max_size.rs  token_metadata_emit.rs  token_metadata_initialize.rs  token_metadata_remove_key.rs  token_metadata_update_authority.rs  token_metadata_update_field.rs  transfer.rs  transfer_fee.rs  transfer_hook.rs  unwrap_lamports.rs
clients/rust-legacy/transfer-hook-test-programs/downgrade/: Cargo.toml
clients/rust-legacy/transfer-hook-test-programs/fail/: Cargo.toml
clients/rust-legacy/transfer-hook-test-programs/success/: Cargo.toml
clients/rust-legacy/transfer-hook-test-programs/swap/: Cargo.toml
clients/rust-legacy/transfer-hook-test-programs/swap-with-fee/: Cargo.toml
clients/rust/src/: lib.rs
confidential-transfer/ciphertext-arithmetic/: Cargo.toml
confidential-transfer/elgamal-registry/: Cargo.toml
confidential-transfer/elgamal-registry/src/: entrypoint.rs  instruction.rs  processor.rs
confidential-transfer/proof-extraction/: Cargo.toml
confidential-transfer/proof-extraction/src/: burn.rs  instruction.rs  mint.rs  transfer.rs  transfer_with_fee.rs
confidential-transfer/proof-generation/: Cargo.toml
confidential-transfer/proof-generation/src/: burn.rs  mint.rs  transfer.rs  transfer_with_fee.rs  withdraw.rs
confidential-transfer/proof-tests/: Cargo.toml
confidential-transfer/proof-tests/tests/: proof_test.rs
confidential/ciphertext-arithmetic/: Cargo.toml
confidential/ciphertext-arithmetic/src/: lib.rs
confidential/elgamal-registry/: Cargo.toml
confidential/elgamal-registry-interface/: Cargo.toml
confidential/elgamal-registry-interface/src/: instruction.rs  lib.rs  state.rs
confidential/elgamal-registry/src/: entrypoint.rs  instruction.rs  lib.rs  processor.rs  state.rs
confidential/proof-extraction/: Cargo.toml
confidential/proof-extraction/src/: burn.rs  encryption.rs  instruction.rs  lib.rs  mint.rs  transfer.rs  transfer_with_fee.rs  withdraw.rs
confidential/proof-generation/: Cargo.toml
confidential/proof-generation/src/: burn.rs  encryption.rs  lib.rs  mint.rs  transfer.rs  transfer_with_fee.rs  withdraw.rs
confidential/proof-tests/: Cargo.toml
confidential/proof-tests/tests/: proof_test.rs
interface/: Cargo.toml  README.md  idl.json
interface/src/: error.rs  generic_token_account.rs  instruction.rs  lib.rs  native_mint.rs  pod.rs  serialization.rs  state.rs
interface/src/extension/: account_len.rs  immutable_owner.rs  mint_close_authority.rs  mod.rs  non_transferable.rs  permanent_delegate.rs
interface/src/extension/confidential_mint_burn/: instruction.rs  mod.rs
interface/src/extension/confidential_transfer/: instruction.rs  mod.rs
interface/src/extension/confidential_transfer_fee/: instruction.rs  mod.rs
interface/src/extension/cpi_guard/: instruction.rs  mod.rs
interface/src/extension/default_account_state/: instruction.rs  mod.rs
interface/src/extension/group_member_pointer/: instruction.rs  mod.rs
interface/src/extension/group_pointer/: instruction.rs  mod.rs
interface/src/extension/interest_bearing_mint/: instruction.rs  mod.rs
interface/src/extension/memo_transfer/: instruction.rs  mod.rs
interface/src/extension/metadata_pointer/: instruction.rs  mod.rs
interface/src/extension/pausable/: instruction.rs  mod.rs
interface/src/extension/permissioned_burn/: instruction.rs  mod.rs
interface/src/extension/scaled_ui_amount/: instruction.rs  mod.rs
interface/src/extension/token_group/: mod.rs
interface/src/extension/token_metadata/: mod.rs
interface/src/extension/transfer_fee/: instruction.rs  mod.rs
interface/src/extension/transfer_hook/: instruction.rs  mod.rs
interface/tests/: float_equivalence.rs  serialization.rs
program/: Cargo.toml  README.md  idl.json
program/src/: entrypoint.rs  error.rs  generic_token_account.rs  instruction.rs  lib.rs  native_mint.rs  offchain.rs  onchain.rs  pod.rs  pod_instruction.rs  processor.rs  serialization.rs  state.rs
program/src/extension/: immutable_owner.rs  mint_close_authority.rs  mod.rs  non_transferable.rs  permanent_delegate.rs  reallocate.rs
program/src/extension/confidential_mint_burn/: account_info.rs  instruction.rs  mod.rs  processor.rs  verify_proof.rs
program/src/extension/confidential_transfer/: account_info.rs  instruction.rs  mod.rs  processor.rs  verify_proof.rs
program/src/extension/confidential_transfer_fee/: account_info.rs  instruction.rs  mod.rs  processor.rs
program/src/extension/cpi_guard/: instruction.rs  mod.rs  processor.rs
program/src/extension/default_account_state/: instruction.rs  mod.rs  processor.rs
program/src/extension/group_member_pointer/: instruction.rs  mod.rs  processor.rs
program/src/extension/group_pointer/: instruction.rs  mod.rs  processor.rs
program/tests/: action.rs  assert_instruction_count.rs  serialization.rs  setup.rs
scripts/: solana.dic  (+7 more)
(+260 files in other folders)
