[package]
name = "spl-token-2022"
version = "10.0.0"
description = "Solana Program Library Token 2022"
documentation = "https://docs.rs/spl-token-2022"
readme = "README.md"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[features]
no-entrypoint = []
test-sbf = []
serde-traits = ["spl-token-2022-interface/serde"]
default = ["zk-ops"]
# Remove this feature once the underlying syscalls are released on all networks
zk-ops = []

[dependencies]
bytemuck = { version = "1.25.0", features = ["derive"] }
num_enum = "0.7.6"
solana-account-info = "3.1.1"
solana-address = { version = "2.6.0", features = ["bytemuck", "nullable"] }
solana-clock = "3.0.0"
solana-cpi = "3.1.0"
solana-instruction = "3.0.0"
solana-msg = "3.1.0"
solana-nullable = { version = "1.1.0", features = ["bytemuck"] }
solana-program-entrypoint = "3.1.1"
solana-program-error = "3.0.1"
solana-program-memory = "3.1.0"
solana-program-option = { version = "3.1.0", features = ["nullable"] }
solana-program-pack = "3.1.0"
solana-rent = "3.0.0"
solana-sdk-ids = "3.1.0"
solana-security-txt = "1.1.2"
solana-sysvar = { version = "3.0.0", features = ["bincode"] }
solana-system-interface = { version = "3.2.0", features = ["bincode"] }
solana-zero-copy = { version = "1.0.0", features = ["bytemuck"] }
solana-zk-sdk-pod = "0.1.1"
solana-zk-elgamal-proof-interface = "0.1.2"
spl-elgamal-registry-interface = { version = "0.1.0", path = "../confidential/elgamal-registry-interface" }
spl-memo-interface = { version = "2.0" }
spl-token-2022-interface = { version = "2.1.0", path = "../interface" }
spl-token-confidential-transfer-ciphertext-arithmetic = { version = "0.4.1", path = "../confidential/ciphertext-arithmetic" }
spl-token-confidential-transfer-proof-extraction = { version = "0.6.0", path = "../confidential/proof-extraction" }
spl-token-group-interface = "0.7.2"
spl-token-metadata-interface = "1.0.0"
spl-transfer-hook-interface = { version = "2.1.0" }

[target.'cfg(not(target_os = "solana"))'.dependencies]
spl-token-confidential-transfer-proof-generation = { version = "0.6.0", path = "../confidential/proof-generation" }

[dev-dependencies]
lazy_static = "1.5.0"
mollusk-svm = "0.12"
proptest = "1.11"
serial_test = "3.4.0"
solana-account = "3.2.0"
spl-tlv-account-resolution = { version = "0.11.1" }
test-case = "3.3.1"
tokio = { version = "1", features = ["macros", "rt"] }

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true

[package.metadata.solana]
program-id = "TokenzQdBNbLqP5VEhdkAS6EPFLC1PHnBqCXEpPxuEb"
