[package]
name = "spl-token-cli"
version = "5.5.0"
description = "SPL-Token Command-line Utility"
documentation = "https://docs.rs/spl-token-cli"
readme = "README.md"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[build-dependencies]
walkdir = "2"

[dependencies]
base64 = "0.22.1"
clap = "3.2.23"
console = "0.16.2"
futures = "0.3"
serde = "1.0.219"
serde_derive = "1.0.103"
serde_json = "1.0.149"
solana-account-decoder = "3.0.0"
solana-clap-v3-utils = { version = "3.1.0", features = ["agave-unstable-api"] }
solana-cli-config = { version = "3.1.0", features = ["agave-unstable-api"] }
solana-cli-output = { version = "3.1.0", features = ["agave-unstable-api"] }
solana-client = { version = "3.1.0", features = ["agave-unstable-api"] }
solana-commitment-config = "3.1.1"
solana-logger = "3.0.0"
solana-remote-wallet = { version = "3.1.0", features = ["agave-unstable-api"] }
solana-sdk = "3.0.0"
solana-system-interface = "3.0.0"
solana-transaction-status = "3.0.0"
spl-associated-token-account-interface = { version = "2.0.0" }
spl-pod = { version = "0.7.2" }
spl-token-interface = "2.0.0"
spl-token-2022-interface = { version = "2.0.0", path = "../../interface" }
spl-token-2022 = { version = "10.0.0", path = "../../program", features = ["no-entrypoint"] }
spl-token-client = { version = "0.18.0", path = "../rust-legacy" }
spl-token-confidential-transfer-proof-generation = { version = "0.5.0", path = "../../confidential/proof-generation" }
spl-token-metadata-interface = { version = "0.8.0" }
spl-token-group-interface = { version = "0.7.0" }
spl-memo-interface = "2.0.0"
strum = "0.28"
strum_macros = "0.28"
tokio = "1.49"

[dev-dependencies]
solana-nonce = "3.0.0"
solana-sdk-ids = "3.1.0"
solana-test-validator = { version = "3.1.0", features = ["agave-unstable-api"] }
assert_cmd = "2.1.2"
libtest-mimic = "0.8"
serial_test = "3.4.0"
tempfile = "3.26.0"

[[bin]]
name = "spl-token"
path = "src/main.rs"

[[test]]
name = "command"
path = "tests/command.rs"
harness = false
