[package]
name = "spl-token-client"
version = "0.18.0"
description = "SPL-Token Rust Client"
documentation = "https://docs.rs/spl-token-client"
readme = "README.md"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[features]
default = ["display"]
dev-context-only-utils = [
    "dep:solana-banks-client",
    "dep:solana-banks-interface",
    "dep:solana-program-test",
]
display = ["dep:solana-cli-output"]

[dependencies]
async-trait = "0.1"
bincode = "1.3.2"
bytemuck = "1.25.0"
futures = "0.3.32"
futures-util = "0.3"
solana-account = "3.2.0"
solana-banks-client = { version = "3.0.0", optional = true }
solana-banks-interface = { version = "3.0.0", optional = true }
solana-compute-budget-interface = "3.0.0"
solana-cli-output = { version = "3.1.0", features = ["agave-unstable-api"], optional = true }
solana-hash = "4.2.0"
solana-instruction = "3.0.0"
solana-message = "3.0.0"
solana-packet = "4.0.0"
solana-program-error = "3.0.0"
solana-program-pack = "3.1.0"
solana-program-test = { version = "3.0.0", optional = true }
solana-pubkey = "4.0.0"
solana-rpc-client = "3.0.0"
solana-rpc-client-api = "3.0.0"
solana-signature = "3.0.0"
solana-signer = "3.0.0"
solana-system-interface = "3.0.0"
solana-transaction = "3.0.0"
spl-associated-token-account-interface = { version = "2.0.0" }
spl-elgamal-registry = { version = "0.4.0", path = "../../confidential/elgamal-registry", features = ["no-entrypoint"] }
spl-memo-interface = "2.0.0"
spl-record = { version = "0.4.0", features = ["no-entrypoint"] }
spl-token-interface = "2.0.0"
spl-token-confidential-transfer-proof-extraction = { path = "../../confidential/proof-extraction", version = "0.5.0" }
spl-token-confidential-transfer-proof-generation = { path = "../../confidential/proof-generation", version = "0.5.0" }
spl-token-2022-interface = { version = "2.0.0", path = "../../interface" }
spl-token-2022 = { version = "10.0.0", path = "../../program", features = ["no-entrypoint"] }
spl-token-group-interface = { version = "0.7.0" }
spl-token-metadata-interface = { version = "0.8.0" }
spl-transfer-hook-interface = { version = "2.1.0" }
tokio = "1"
thiserror = "2.0"

[dev-dependencies]
async-trait = "0.1"
borsh = "1.6.0"
bytemuck = "1.25.0"
futures-util = "0.3"
solana-program-test = { version = "3.1.0", features = ["agave-unstable-api"] }
solana-sdk = "3.0.0"
solana-sdk-ids = "3.1.0"
spl-pod = { version = "0.7.2" }
spl-instruction-padding-interface = "1.0.0"
spl-tlv-account-resolution = "0.11.0"
spl-token-client = { path = ".", features = ["dev-context-only-utils"] }
test-case = "3.3"
