[package]
name = "spl-token-confidential-transfer-ciphertext-arithmetic"
version = "0.2.1"
description = "Solana Program Library Confidential Transfer Ciphertext Arithmetic"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
base64 = "0.22.1"
bytemuck = "1.21.0"
solana-curve25519 = "2.1.0"
solana-zk-sdk = "2.1.0"

[dev-dependencies]
spl-token-confidential-transfer-proof-generation = { version = "0.3.0", path = "../proof-generation" }
curve25519-dalek = "4.1.3"
