[package]
name = "spl-elgamal-registry"
version = "0.1.1"
description = "Solana ElGamal Registry Program"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
bytemuck = { version = "1.22.0", features = ["derive"] }
solana-account-info = "2.2.1"
solana-cpi = "2.2.1"
solana-instruction = "2.2.1"
solana-msg = "2.2.1"
solana-program-entrypoint = "2.2.1"
solana-program-error = "2.2.1"
solana-pubkey = "2.2.1"
solana-rent = "2.2.1"
solana-sdk-ids = "2.2.1"
solana-system-interface = "1.0.0"
solana-sysvar = "2.2.1"
solana-zk-sdk = "2.2.0"
spl-pod = "0.5.0"
spl-token-confidential-transfer-proof-extraction = { version = "0.2.1", path = "../proof-extraction" }

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[package.metadata.solana]
program-id = "regVYJW7tcT8zipN5YiBvHsvR5jXW1uLFxaHSbugABg"

[lints]
workspace = true
