[package]
name = "spl-token-confidential-transfer-proof-extraction"
version = "0.2.1"
description = "Solana Program Library Confidential Transfer Proof Extraction"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bytemuck = "1.21.0"
solana-curve25519 = "2.1.0"
solana-program = "2.1.0"
solana-zk-sdk = "2.1.0"
spl-pod = "0.5.0"
thiserror = "2.0.11"
