[package]
name = "spl-token-confidential-transfer-proof-extraction"
version = "0.4.0"
description = "Solana Program Library Confidential Transfer Proof Extraction"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bytemuck = "1.23.1"
solana-account-info = "2.2.1"
solana-curve25519 = "2.3.4"
solana-instruction = "2.2.1"
solana-instructions-sysvar = "2.2.1"
solana-msg = "2.2.1"
solana-program-error = "2.2.1"
solana-pubkey = "2.2.1"
solana-sdk-ids = "2.2.1"
solana-zk-sdk = "2.3.4"
spl-pod = "0.5.1"
thiserror = "2.0.12"
