[package]
name = "spl-token-confidential-transfer-proof-generation"
version = "0.4.0"
description = "Solana Program Library Confidential Transfer Proof Generation"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
curve25519-dalek = "4.2.0"
solana-zk-sdk = "2.3.4"
thiserror = "2.0.12"

[lints]
workspace = true
