[package]
name = "spl-token-confidential-transfer-ciphertext-arithmetic"
version = "0.5.1"
description = "Solana Program Library Confidential Transfer Ciphertext Arithmetic"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bytemuck = "1.25.0"
solana-curve25519 = "4.0.1"
solana-zk-sdk-pod = "0.1.2"

[dev-dependencies]
spl-token-confidential-transfer-proof-generation = { version = "0.6.0", path = "../proof-generation" }
solana-zk-sdk = "6.0.1"
curve25519-dalek = "4.1.3"
